--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,17 @@
-:root {
+:root{
+  --base-clr: #11121a;
+  --line-clr: #42434a;
+  --hover-clr: #222533;
+  --text-clr: #f2f5f7;
+  --accent-clr: #5e63ff;
+  --secondary-text-clr: ##b0b3c1;;
   --background: #ffffff;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #0E1D59;
     --foreground: #ededed;
   }
 }
@@ -17,7 +23,7 @@ body {
 }
 
 body {
-  color: var(--foreground);
+  color: var(--text-clr);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
