--- a/app/components/Header.module.css
+++ b/app/components/Header.module.css
@@ -14,6 +14,7 @@
   color: white;
   height: 25vw;
   max-height: 33vh;
+  /* min-height: 230px; */
   width: 100%;
   min-width: 500px;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.7) 0px 6px 6px;
@@ -51,19 +52,105 @@
   color: var(--text-clr);
   font-weight: 500;
 }
+.toShow {
+  display: none;
+}
+.toHide {
+  display: block;
+}
 
-@media(max-width: 600px) {
+@media (max-width: 300px) {
+  .container {
+    grid-template-columns: unset;
+    grid-template-rows: 1fr 1fr;
+    padding: 0.3rem 1rem;
+    min-width: unset;
+    grid-gap: 0.2rem;
+  }
+  .direita {
+    justify-content: center;
+    font-size: 0.40rem;
+    .gap1 {
+      flex-direction: unset;
+    }
+  }
+  .gap1 {
+    gap: 0.5rem;
+  }
+  .icon {
+    height: 0.6rem;
+    width: 0.6rem;
+  }
+  .image {
+    margin: auto auto;
+    height: 32px;
+    width: 85px;
+  }
+  .date {
+    font-weight: 300;
+  }
+  .address {
+    font-weight: 300;
+  }
+  span.toHide {
+    display: none;
+  }
+  span.toShow {
+    display: block;
+  }
+}
+@media (300px <= width <= 400px) {
+  .container {
+    /* grid-template-columns: minmax(200px, 1fr) 1fr; */
+    grid-template-columns: unset;
+    grid-template-rows: 1fr 1fr;
+    padding: 0.3rem 1rem;
+    min-width: unset;
+    grid-gap: 0.3rem;
+  }
+  .direita {
+    justify-content: center;
+    font-size: 0.50rem;
+    .gap1 {
+      flex-direction: unset;
+    }
+  }
+  .icon {
+    height: 0.6rem;
+    width: 0.6rem;
+  }
+  .image {
+    margin: auto auto;
+    height: 55px;
+    width: 130px;
+  }
+  .date {
+    font-weight: 400;
+  }
+  .address {
+    font-weight: 400;
+  }
+  span.toHide {
+    display: none;
+  }
+  span.toShow {
+    display: block;
+  }
+}
+
+
+@media (400px <= width <= 600px) {
   .container {
     grid-template-columns: minmax(200px, 1fr) 1fr;
     padding: 0.5rem 1rem;
     min-width: unset;
   }
   .direita {
-    font-size: 0.5rem;
+    font-size: 0.45rem;
   }
   .image {
     height: 150px;
-    width: 250px;
+    width: 230px;
   }
   .icon {
     height: 0.8rem;
@@ -71,14 +158,7 @@
   }
 }
 
-@media(max-width: 350px) {
-  .image {
-    height: 100px;
-    width: 175px;
-  }
-}
-
-@media (600px < width < 1000px) {
+@media (600px <= width <= 1000px) {
   .container {
     padding: 0.5rem 1rem;
   }
@@ -91,7 +171,7 @@
   }
 }
 
-@media(min-width: 1000px) {
+@media (min-width: 1000px) {
   .container {
     padding: 1rem 2rem;
   }
