--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 :root{
   --base-clr: #11121a;
   --line-clr: #42434a;
   --hover-clr: #222533;
   --text-clr: #f2f5f7;
-  --accent-clr: #5e63ff;
+  --accent-clr: #6640A4;
   --secondary-text-clr: #E4E1E5;
-  --background: #ffffff;
+  --background: #ECECEC;
   --foreground: #0E1D59;
+  --red: #BB2426;
+  font-family: 'Inter', 'Open Sans', sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,9 +28,9 @@ body {
 }
 
 body {
-  color: var(--text-clr);
+  color: var(--base-clr);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Inter, Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
