--- a/app/components/CallToAct.module.css
+++ b/app/components/CallToAct.module.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 5vh 5svw;
+  /* margin: 5vh 5svw; */
 }
 
 .button {
@@ -24,6 +24,9 @@
 }
 
 @media (max-width: 600px) {
+  .container>a {
+    width: 100%;
+  }
   .button {
     width: 100%;
   }
