--- a/app/components/Card.module.css
+++ b/app/components/Card.module.css
@@ -1,13 +1,32 @@
 /* Estilo dos cards */
 .card {
-  width: 200px;
-  height: 300px;
+  width: 195px;
+  height: 250px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 10px;
   color: white;
+  border-radius: 20px;
   font-size: 1.5rem;
   text-align: center;
-  border-radius: 20px;
+  border: 0px solid #fff;
+  cursor: pointer;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
+
+.card >div:nth-child(1) {
+  transform-origin: 50% 50% 0px;
+}
+
+.card >div:nth-child(2) {
+  display: block;
+  margin: auto 0;
+}
+
+.card >div:nth-child(3)  {
+  font-size: 1rem;
+}
+
