--- a/app/components/Events.module.css
+++ b/app/components/Events.module.css
@@ -3,11 +3,18 @@
   display: flex;
   flex-direction: column;
   padding: 1.5rem;
+  background-color: #D9D9D9;
 }
 
 /* Título */
 .container h2 {
   text-align: center;
+  color: var(--red);
+}
+
+/* Seleciona os divs .firstRow e .secondRow e aplica o padding bottom */
+.container > div, .secondRow > div {
+  padding-bottom: 2rem;
 }
 
 /* Primeira linha de cards */
