--- a/app/components/Promoters.module.css
+++ b/app/components/Promoters.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin: 5svh 5svw;
+  padding: 5svh 5svw;
 }
 
 .abramede {
