--- a/app/components/Comission.module.css
+++ b/app/components/Comission.module.css
@@ -1,65 +1,49 @@
 .container {
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  background-color: #68517F;
-  padding-top: 5svw;
-}
-
-.firstCollumn, .secondCollumn {
-  width: 100%;
-}
-.firstCollumn {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  gap: 1rem;
-  color: #fff;
-  background-color: #68517F;
-}
-.secondCollumn {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  gap: 1rem;
-  color: #fff;
-  background-color: #68517F;
-}
-
-.avatars {
-  margin: 0 auto;
-  padding: 0;
-  background-color: #0E1D59;
-  width: 100%;
-  height: 100vh;
-}
-
-.gridCircle {
-  display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 1.5rem;
-  background-image: url('../../assets/images/svg/grid-circles.svg');
-  background-size: ;
-  background-repeat: no-repeat;
-  background-position: center;
-  padding: 20px;
-  border-radius: 8px;
-  width: 100%;
-  height: 100%;
 }
 
-.abramede {
-  /* height: 80px;
-  width: 200px; */
-  aspect-ratio: auto 401 / 145;
+.comissionContainer {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  background-color: #0E1D59;
 }
-.srmg {
-  /* height: 80px;
-  width: 280px; */
-  aspect-ratio: auto 641 / 182;
+
+.comissionColumn1, .comissionColumn2 {
+  flex: 1;
+  min-width: 300px;
+}
+
+.comissionColumn1 {
+  flex: 1 1 60vw;
+}
+.comissionColumn2 {
+  flex: 1 1 40vw;
+}
+
+.comissionTitle {
+  background-color: #68517F;
+  color: white;
+  padding: 2svh 0;
+  text-align: center;
+}
+
+.comissionTitle > h2 {
+  padding-top: 2svh;
+}
+
+.comissionTitle img {
+  margin-right: 10px;
+}
+
+.medicosContainer {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  flex-wrap: wrap;
+  margin: 1svh 5svw;
 }
 
 .promoters {
@@ -74,20 +58,20 @@
   filter: sepia(100%); /* Opacidade ao passar o mouse */
 }
 
-@media (768px <= width <= 992px) {
-  .promoters {
-    height: 60px;
-  }
+.abramede {
+  aspect-ratio: auto 401 / 145;
+}
+.srmg {
+  aspect-ratio: auto 641 / 182;
 }
 
-@media (480px <= width <= 768px) {
-  .promoters {
-    height: 40px;
+@media (max-width: 768px) {
+  .comissionColumn1, .comissionColumn2 {
+    flex: 1 1 100%;
   }
 }
-
-@media (max-width: 480px) {
-  .promoters {
-    height: 30px;
+@media (min-width: 1000px) {
+  .comissionContainer {
+    flex-wrap: unset;
   }
 }
