Fixing Components Responsivities

--- a/app/components/CallToAct.module.css
+++ b/app/components/CallToAct.module.css
@@ -9,7 +9,7 @@
 
 .button {
   padding: 15px 20px;
-  font-size: 1.2rem;
+  font-size: inherit;
   font-weight: bold;
   color: white;
   background-color: var(--danger-clr);
