--- a/app/components/Card.module.css
+++ b/app/components/Card.module.css
@@ -16,16 +16,16 @@
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 
-.card >div:nth-child(1) {
+.card > div:nth-of-type(1) {
   transform-origin: 50% 50% 0px;
 }
 
-.card >div:nth-child(2) {
+.card > div:nth-of-type(2) {
   display: block;
   margin: auto 0;
 }
 
-.card >div:nth-child(3)  {
+.card > div:nth-of-type(3)  {
   font-size: 1rem;
 }
 
@@ -33,3 +33,22 @@
   margin: 10px 0 -5px;
 }
 
+@media (max-width: 400px) {
+  .card {
+    width: 150px;
+    height: 210px;
+    font-size: 1rem;
+  }
+  .card > div:nth-of-type(1) {
+    font-size: 1rem;
+  }
+  .card > div:nth-of-type(2) > img {
+    transform: scale(0.7);
+  }
+  .card > div:nth-of-type(3) {
+    font-size: 0.8rem;
+  }
+  .card > a:nth-of-type(1) > img {
+    transform: scale(0.8);
+  }
+}
