Fixing Card image scale and position and Map Icon

--- a/app/components/Description.module.css
+++ b/app/components/Description.module.css
@@ -76,6 +76,14 @@
   margin-top: 5vh;
 }
 
-@media (max-width: 400px) {
-  font-size: 0.7em;
+@media ( 300px <= width <= 400px) {
+  .collapsible {
+    font-size: 0.8em;
+  }
+}
+
+@media (max-width: 300px) {
+  .collapsible {
+    font-size: 0.7em;
+  }
 }
