--- a/app/components/AvatarCard.module.css
+++ b/app/components/AvatarCard.module.css
@@ -40,7 +40,7 @@
 }
 .avatar:hover {
   transform: scale(1.5);
-  transition: transform 0.5s ease;
+  transition: transform 0.5s ease-in-out;
 }
 
 .card >div:nth-child(1) {
