--- a/app/components/Card.module.css
+++ b/app/components/Card.module.css
@@ -16,24 +16,32 @@
   /* overflow: hidden; */
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 
-  & div:nth-of-type(2) {
+  & .titleText {
     transform-origin: 50% 50% 0px;
+    position: absolute;
+    top: 30px;
   }
 
-  & div:nth-of-type(3) {
-    display: block;
-    margin: auto 0;
+  & .imageCard {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: scale(0.75);
+    margin-top: 1rem;
   }
 
-  & div:nth-of-type(4)  {
+  & .subtitleText {
+    position: absolute;
+    bottom: 40px;
     font-size: 1rem;
+    width: 100%;
+    left: 0;
   }
 
   & a {
-    margin: 10px 0 -5px;
+    position: absolute;
+    bottom: 0px;
   }
-
-
 }
 
 .ribbonContent {
@@ -43,6 +51,7 @@
   width: 72px;
   height: 75px;
   overflow: hidden;
+  z-index: 10;
   }
 
 .ribbon {
@@ -81,6 +90,11 @@
 .card:hover {
   transform: scale(1.1);
   transition: transform 0.5s ease-in-out;
+
+  /* & .ribbonContent {
+    opacity: 0;
+    transition: opacity 0.5s ease;
+  } */
 }
 
 @media (max-width: 400px) {
@@ -88,17 +102,19 @@
     width: 150px;
     height: 210px;
     font-size: 1rem;
-  }
-  .card > div:nth-of-type(1) {
-    font-size: 1rem;
-  }
-  .card > div:nth-of-type(2) > img {
-    transform: scale(0.7);
-  }
-  .card > div:nth-of-type(3) {
-    font-size: 0.8rem;
-  }
-  .card > a:nth-of-type(1) > img {
-    transform: scale(0.8);
+
+    & .titleText {
+      font-size: 1rem;
+    }
+    & .imageCard {
+      transform: scale(0.6);
+    }
+    & .subtitleText {
+      bottom: 35px;
+      font-size: 0.8rem;
+    }
+    & .imageDownloadPDF {
+      transform: scale(0.8);
+    }
   }
 }
