--- a/app/components/Header.module.css
+++ b/app/components/Header.module.css
@@ -112,7 +112,6 @@
     height: 20vh;
   }
   .container > img:nth-of-type(1) {
-    height: 71%;
     width: unset;
     transform: scale(1.6);
   }
@@ -132,11 +131,13 @@
     height: 55px;
     width: 130px;
   }
-  .date {
-    font-weight: 400;
+  .date, .address{
+    font-weight: 300;
+    font-size: smaller;
   }
+
   .address {
-    font-weight: 400;
+    padding-left: 2rem;
   }
   span.toHide {
     display: none;
@@ -157,8 +158,8 @@
     font-size: 0.45rem;
   }
   .image {
-    height: 150px;
-    width: 230px;
+    /* height: 150px;
+    width: 230px; */
   }
   .icon {
     height: 0.8rem;
