--- a/app/components/icons/icon.module.css
+++ b/app/components/icons/icon.module.css
@@ -12,6 +12,12 @@
   transition: background-color 0.3s ease;
 }
 
+.whatsapp:hover {
+  transform: rotateY(360deg);
+  transition: transform 0.6s ease-in-out;
+  scale: 1.2;
+}
+
 .rotate {
   transform: rotate(180deg);
   transition: transform 0.3s ease;
