Excluding api auth route and adding SocialMedias

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,9 @@
   --disabled-clr: #6c757d;
   --light-clr: #f8f9fa;
   --dark-clr: #212529;
+  --instagram-clr: #e4405f;
+  --facebook-clr: #3b5998;
+  --x-clr: #212529;
   font-family: 'Inter', 'Open Sans', sans-serif;
 
   /* Cores dos cards */
