--- a/app/components/Header.module.css
+++ b/app/components/Header.module.css
@@ -62,6 +62,7 @@
 
 @media (max-width: 300px) {
   .container {
+    position: relative;
     grid-template-columns: unset;
     grid-template-rows: 1fr 1fr;
     padding: 0.3rem 1rem;
