--- a/app/components/Header.module.css
+++ b/app/components/Header.module.css
@@ -14,8 +14,8 @@
   background-color: var(--primary-clr);
   color: white;
   height: 25vw;
-  max-height: 35vh;
-  /* min-height: 230px; */
+  max-height: 300px;
+  min-height: 90px;
   width: 100%;
   min-width: 500px;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.7) 0px 6px 6px;
