--- a/app/components/SocialMedias.module.css
+++ b/app/components/SocialMedias.module.css
@@ -1,6 +1,6 @@
 .container {
   position: absolute;
-  top: 4rem;
+  top: 0;
   right: 0;
   margin: 1rem;
   background-color: var(--primary-clr);
@@ -30,44 +30,14 @@
   height: 1.25rem;
 }
 
-.socialContainer a::before {
-  content: attr(datasocial);
-  position: absolute;
-  background-color: var(--social-clr);
-  color: var(--light-clr);
-  text-decoration: none;
-  padding: 0.5em 1em;
-  border-radius: 100px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
-  transform: translateY(-30px) rotate(25deg);
-  opacity: 0;
-  transition: 200ms cubic-bezier(.42,0,.44,1.68);
-}
 .socialContainer a:hover {
   background-color: var(--social-clr);
   fill: var(--light-clr);
 }
-/* .socialContainer a:hover svg {
-  background-color: var(--social-clr);
-  fill: var(--light-clr);
-} */
-.socialContainer a::after {
-  content: '';
-  position: absolute;
-  height: 0;
-  width: 0;
-  border-left: 8px solid transparent;
-  border-right: 8px solid transparent;
-  border-top: 10px solid var(--social-clr);
-  transform: translateY(0) rotate(25deg);
-  opacity: 0;
-  transition: 200ms cubic-bezier(.42,0,.44,1.68);
-}
-.socialContainer a:hover::before {
-  transform: translateY(-65px) rotate(0);
-  opacity: 1;
-}
-.socialContainer a:hover::after {
-  transform: translateY(-42px) rotate(0);
-  opacity: 1;
+
+@media (max-width: 768px) {
+  .container {
+    margin: 0.5rem;
+    transform: scale(0.75);
+  }
 }
