--- a/app/components/Description.module.css
+++ b/app/components/Description.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin: 5svh 5svw 0rem;
+  padding: 1.5rem 1.5rem 0rem;
   background-color: var(--background);
   color: var(--foreground);
 }
