--- a/app/components/Footer.module.css
+++ b/app/components/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
   display: flex;
-  margin: 5svh 5svw 1svh;
+  padding: 1.5rem;
   font-size: 0.75em;
   font-weight: 500;
   text-align: center;
