--- a/app/components/Promoters.module.css
+++ b/app/components/Promoters.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin: 5svh 0 0;
+  padding: 1.5rem;
   background-color: var(--background);
   color: var(--foreground);
   /* background-image: url('/12.png');
@@ -12,7 +12,6 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  padding: 5svh 5svw;
 }
 
 .abramede {
@@ -36,10 +35,6 @@
 .promoters:hover {
   cursor: pointer;
   filter: sepia(100%); /* Opacidade ao passar o mouse */
-}
-
-.mw5vw {
-  margin: 5vw 0;
 }
 
 @media (768px <= width <= 992px) {
