--- a/app/components/Tables.module.css
+++ b/app/components/Tables.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   text-align: center;
   margin: 0;
-  padding: 5svw;
+  padding: 1.5rem;
   background-color: var(--accent-clr);
   background-image: linear-gradient(10deg, var(--accent-clr) 0%, var(--secondary-clr) 50%, var(--primary-clr) 100%);
   cursor: default;
