Fixing Banner Resposive Sizes and Font Sizes

--- a/app/components/Banner.module.css
+++ b/app/components/Banner.module.css
@@ -7,11 +7,12 @@
   justify-content: center;
   align-items: center;
   padding: 1.3vh 2vw;
-  border-radius: 16px;
-  font-size: 1.7vw;
+  border-radius: 10px;
+  font-size: 1.7em;
   font-weight: 900;
   border: 1px solid var(--foreground);
-  margin: 4vh 21vw;
+  margin: 3rem auto;
+  width: max-content;
   background-color: var(--secondary-text-clr);
   color: var(--foreground);
   box-shadow: rgba(0, 0, 0, 0.19) 0px 1px 5px, rgba(0, 0, 0, 0.2) 0px 3px 3px;
@@ -35,9 +36,7 @@
 /* Media queries para ajustar o tamanho do texto em diferentes larguras de tela */
 @media (min-width: 992px) {
   .banner {
-    font-size: 1.9vw;
-    padding: 1vh 2vw;
-    margin: 4vh 20vw;
+    font-size: 1.6em;
   }
 }
 
@@ -54,24 +53,28 @@
 
 @media (768px <= width <= 992px) {
   .banner {
-    font-size: 2vw;
-    padding: 1vh 3vw;
-    margin: 3vh 20vw;
+    font-size: 1.3em;
   }
 }
 
 @media (480px <= width <= 768px) {
   .banner {
-    font-size: 2.5vw;
-    padding: 1vh 3vw;
-    margin: 3vh 15vw;
+    font-size: 1em;
   }
 }
 
-@media (max-width: 480px) {
+@media (300px <= width <= 480px) {
   .banner {
-    font-size: 3vw;
-    padding: 1vh 3vw;
-    margin: 3vh 10vw;
+    font-size: 0.75em;
+    font-weight: 700;
+    padding: 1vh 2vw;
+  }
+}
+
+@media (max-width: 300px) {
+  .banner {
+    font-size: 0.65em;
+    font-weight: 700;
+    padding: 1vh 2vw;
   }
 }
