Resizing Sponsors images

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,7 @@
   --disabled-clr: #6c757d;
   --light-clr: #f8f9fa;
   --dark-clr: #212529;
+  --gray-clr: #9e9e9e;
   --instagram-clr: #e4405f;
   --facebook-clr: #3b5998;
   --x-clr: #212529;
