--- a/app/components/Sponsor.module.css
+++ b/app/components/Sponsor.module.css
@@ -12,8 +12,8 @@
 }
 
 .containerSponsors > p {
-  color: #9e9e9e;
-  padding: 5svh 0 3svh;
+  color: var(--gray-clr);
+  padding: 2rem 0 1rem;
 }
 
 .promoters {
@@ -26,14 +26,22 @@
 }
 
 .abramede {
-  /* height: 80px;
-  width: 200px; */
   aspect-ratio: auto 401 / 145;
+  width: 120px !important;
 }
 .srmg {
-  /* height: 80px;
-  width: 280px; */
   aspect-ratio: auto 641 / 182;
+  width: 120px !important;
+  height: auto;
+}
+.bayerClass, .dasaClass, .braccoClass, .ceuClass{
+  width: 50px !important;
+  height: auto;
+}
+
+.saoMarcosClass {
+  width: 60px !important;
+  height: auto;
 }
 
 .sponsors {
@@ -61,12 +69,12 @@
   margin-block-end: 0.25rem;
   font-size: 1em;
   font-weight: 600;
-  color: #9e9e9e;
+  color: var(--gray-clr);
 }
 
 .hr3 {
   border: 0;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   height: 1px;
   width: 100%;
   background-image: linear-gradient(to right, transparent, #ccc, transparent);
@@ -78,11 +86,11 @@
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  gap: 2svw;
+  gap: 1.5rem;
 }
 .imgSponsors {
-  /* height: 54px;
-  width: auto; */
+  width: 80px;
+  height: auto;
   transition: filter 0.5s ease-in-out; /* Transição de opacidade */
   object-fit: fill;
 }
