--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root{
+  interpolate-size: allow-keywords; /* Opt-in the whole page to interpolate sizes to/from keywords */
+
   --base-clr: #11121a;
   --line-clr: #42434a;
   --hover-clr: #222533;
