--- a/app/components/Sponsor.module.css
+++ b/app/components/Sponsor.module.css
@@ -19,7 +19,7 @@
 .promoters {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
   gap: 10svw;
   flex-wrap: wrap;
@@ -34,12 +34,27 @@
   width: 120px !important;
   height: auto;
 }
-.bayerClass, .dasaClass, .braccoClass, .ceuClass{
+.bayerClass, .braccoClass {
+  width: 40px !important;
+  height: auto;
+}
+.dasaClass, .canonClass {
   width: 50px !important;
   height: auto;
 }
-
 .saoMarcosClass {
+  width: 70px !important;
+  height: auto;
+}
+.mhedicaClass {
+  width: 90px !important;
+  height: auto;
+}
+.fleuryClass, .supriMedicalClass {
+  width: 100px !important;
+  height: auto;
+}
+.ceuClass {
   width: 60px !important;
   height: auto;
 }
@@ -49,16 +64,17 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
   gap: 2svw;
 }
 .gold, .silver, .bronze {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   align-items: center;
-  padding: 0 2rem 2rem;
+  padding: 0 2rem;
+  width: 370px;
   /* border-radius: 1rem;
   background-color: #f5f5f5;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px; */
@@ -100,6 +116,12 @@
   filter: sepia(100%); /* Opacidade ao passar o mouse */
 }
 
+@media (min-width: 1024px) {
+  .gold, .silver {
+    min-height: 98px;
+  }
+}
+
 /* @media (768px <= width <= 992px) {
   .imgSponsors {
     height: 60px;
@@ -109,11 +131,5 @@
 @media (480px <= width <= 768px) {
   .imgSponsors {
     height: 40px;
-  }
-}
-
-@media (max-width: 480px) {
-  .imgSponsors {
-    height: 30px;
   }
 } */
