--- a/app/components/Events.module.css
+++ b/app/components/Events.module.css
@@ -55,7 +55,13 @@
   padding: 1.5rem;
 }
 
+.titleOppening {
+  display: grid;
+  margin-top: -10px;
+}
+
 /* Cores dos cards */
+.card0 { background-color: var(--secondary-clr); }
 .card1 { background-color: var(--card1-clr); }
 .card2 { background-color: var(--card2-clr); }
 .card3 { background-color: var(--card3-clr); }
