--- a/app/components/Promoters.module.css
+++ b/app/components/Promoters.module.css
@@ -2,27 +2,13 @@
   padding: 1.5rem;
   background-color: var(--background);
   color: var(--foreground);
-  /* background-image: url('/12.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; */
 }
 
 .containerPromoters {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-}
-
-.abramede {
-  /* height: 80px;
-  width: 200px; */
-  aspect-ratio: auto 401 / 145;
-}
-.srmg {
-  /* height: 80px;
-  width: 280px; */
-  aspect-ratio: auto 641 / 182;
+  padding-block: 2rem;
 }
 
 .promoters {
