Refactoring code to use Vercel Neon/Prisma

--- a/app/speakers/form/[year]/SpeakersForm.module.css
+++ b/app/speakers/form/[year]/SpeakersForm.module.css
@@ -257,7 +257,7 @@
   vertical-align: middle;
 }
 
-.otherCategoryContainer {
+.other_categoryContainer {
   margin-top: 0.5rem;
   margin-left: 1.5rem;
 }
