--- a/app/speakers/list/[year]/SpeakersList.module.css
+++ b/app/speakers/list/[year]/SpeakersList.module.css
@@ -1,6 +1,6 @@
 .container {
   padding: 2rem;
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto;
 }
 
@@ -26,7 +26,7 @@
 
 .table th,
 .table td {
-  padding: 1rem;
+  padding: .5rem .25rem;;
   text-align: left;
   border-bottom: 1px solid #dee2e6;
 }
@@ -80,8 +80,17 @@
   transition: transform 0.2s ease;
 }
 
-.curriculum, .lectureName {
+.curriculum, .lecture_name {
   width: 95%;
+}
+
+.totalSpeakers {
+  text-align: center;
+  color: #666;
+  margin-bottom: 2rem;
+  font-size: 1.1rem;
+  padding: 0.5rem;
+  border-bottom: 1px solid #eaeaea;
 }
 
 @media (max-width: 768px) {
