--- a/app/speakers/form/[year]/SpeakersForm.module.css
+++ b/app/speakers/form/[year]/SpeakersForm.module.css
@@ -1,3 +1,10 @@
+.optionLabel {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 2px 0;
+}
+
 .formContainer {
   max-width: 800px;
   margin: 0 auto;
