--- a/app/speakers/form/[year]/SpeakersForm.module.css
+++ b/app/speakers/form/[year]/SpeakersForm.module.css
@@ -169,6 +169,18 @@
   height: auto;
 }
 
+.formControl:disabled {
+  background-color: #f5f5f5;
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+
+.submitButton:disabled,
+.clearButton:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
+}
+
 @media screen and (max-width: 768px) {
   .formContainer {
     padding: 1rem;
