--- a/app/components/CallToAct.module.css
+++ b/app/components/CallToAct.module.css
@@ -4,7 +4,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 3vh 5vw;
 }
 
 .button {
@@ -26,5 +25,6 @@
 @media (max-width: 600px) {
   .container, .container > a, .button {
     width: 100%;
+    padding: 10px 0;
   }
 }
